--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -26,5 +26,5 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url('Engine.png');
+    background-image: url('dd1.jpg');
   }
